tests/e2e/try_scope_invalid7.error
Error: syntax error in story at line 4, column 1

4|    e += 1
      ^

E0101: Variable `e` has not been defined.
