tests/e2e/try_scope_invalid7.story
try
  e = 0

e += 1
